# learning_qml

./: CMakeLists.txt  Main.qml  README.md  main.cpp  source.qrc
day02/: day02.md
day03/: day03.md
